@@ -1,0 +1,1 @@
+usr/lib/grub/@CPU_PLATFORM@/efiemu*.o
