@@ -1,6 +1,10 @@
 ../../debian/presubj			usr/share/bug/@PACKAGE@
 ../../debian/script			usr/share/bug/@PACKAGE@
 
-usr/lib/grub/@CPU_PLATFORM@/
+usr/lib/grub/@CPU_PLATFORM@/*.img
+usr/lib/grub/@CPU_PLATFORM@/*.lst
+usr/lib/grub/@CPU_PLATFORM@/*.mod
+usr/lib/grub/@CPU_PLATFORM@/config.h
+usr/lib/grub/@CPU_PLATFORM@/modinfo.sh
 usr/sbin/grub-install			usr/lib/grub/@CPU_PLATFORM@
 usr/sbin/grub-mknetdir			usr/lib/grub/@CPU_PLATFORM@
