@@ -1,0 +1,4 @@
+usr/lib/grub/@CPU_PLATFORM@/*.exec
+usr/lib/grub/@CPU_PLATFORM@/*.module
+usr/lib/grub/@CPU_PLATFORM@/gdb_grub
+usr/lib/grub/@CPU_PLATFORM@/gmodule.pl
