@@ -72,7 +72,9 @@ build/stamps/build-%: export DH_OPTIONS = -p$(package) -Bbuild/$(package)
 
 install/%: package = $(subst install/,,$@)
 install/%: package_bin = $(package)-bin
+install/%: package_dbg = $(package)-dbg
 install/grub-emu: package_bin = grub-emu
+install/grub-emu: package_dbg = grub-emu-dbg
 install/%: export DH_OPTIONS = -p$(package) -Bbuild/$(patsubst grub-common,grub-$(COMMON_PLATFORM),$(package))
 
 build/stamps/autogen: autogen.sh configure.ac Makefile.util.def grub-core/Makefile.core.def
@@ -189,6 +191,12 @@ install/grub-pc install/grub-efi-ia32 install/grub-efi-amd64 install/grub-efi-ia
 			$(call platform_subst,$(package_bin).$$i.$(DEB_HOST_ARCH_CPU).in,$(package_bin),$$i); \
 			$(call platform_subst,$(package_bin).$$i.$(DEB_HOST_ARCH_OS).in,$(package_bin),$$i); \
 			[ -s debian/$(package_bin).$$i ] || rm -f debian/$(package_bin).$$i; \
+			> debian/$(package_dbg).$$i; \
+			$(call platform_subst,$$i-dbg.in,$(package_dbg),$$i); \
+			$(call platform_subst,$(package_dbg).$$i.in,$(package_dbg),$$i); \
+			$(call platform_subst,$(package_dbg).$$i.$(DEB_HOST_ARCH_CPU).in,$(package_dbg),$$i); \
+			$(call platform_subst,$(package_dbg).$$i.$(DEB_HOST_ARCH_OS).in,$(package_dbg),$$i); \
+			[ -s debian/$(package_dbg).$$i ] || rm -f debian/$(package_dbg).$$i; \
 		done ; \
 	fi
 
@@ -220,6 +228,22 @@ install/grub-pc install/grub-efi-ia32 install/grub-efi-amd64 install/grub-efi-ia
 			>> $(CURDIR)/debian/$(package_bin)/usr/share/lintian/overrides/$(package_bin) ; \
 	fi
 
+	mkdir -p $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides
+	echo "$(package_dbg): unstripped-binary-or-object *.module" \
+		>> $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides/$(package_dbg)
+	echo "$(package_dbg): statically-linked-binary *.image" \
+		>> $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides/$(package_dbg)
+	cd debian/tmp-$(package) && find usr/lib/grub -name kernel.exec \
+		| sed -e "s%.*%$(package_dbg): statically-linked-binary &%g" \
+	>> $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides/$(package_dbg)
+	if [ "$@" = "install/grub-efi-amd64" ] && [ "$(DEB_HOST_ARCH_CPU)" = "i386" ] ; then \
+		echo "$(package_dbg): binary-from-other-architecture *.module" \
+			>> $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides/$(package_dbg) ; \
+		cd debian/tmp-$(package) && find usr/lib/grub -name kernel.exec \
+			| sed -e "s%.*%$(package_dbg): binary-from-other-architecture &%g" \
+		>> $(CURDIR)/debian/$(package_dbg)/usr/share/lintian/overrides/$(package_dbg) ; \
+	fi
+
 install/grub-common:
 	set -e ; for i in $(AUTOGEN_DEB_FILES) ; do \
 		if [ -e debian/grub-common.$$i.in ] ; then \
@@ -245,8 +269,10 @@ override_dh_install:
 	set -e; for package in grub-pc grub-efi-ia32 grub-efi-amd64 grub-efi-ia64 grub-ieee1275 grub-coreboot grub-yeeloong; do \
 		dh_install -p$$package --sourcedir=debian/tmp-$$package; \
 		dh_install -p$$package-bin --sourcedir=debian/tmp-$$package; \
+		dh_install -p$$package-dbg --sourcedir=debian/tmp-$$package; \
 	done
 	dh_install -pgrub-emu --sourcedir=debian/tmp-grub-emu
+	dh_install -pgrub-emu-dbg --sourcedir=debian/tmp-grub-emu
 
 override_dh_installdocs:
 	dh_installdocs -pgrub-common -pgrub-rescue-pc -pgrub-firmware-qemu -A AUTHORS NEWS README THANKS TODO
@@ -265,7 +291,7 @@ override_dh_clean: debian/legacy/update-grub debian/grub-extras
 	chmod +x debian/{script,grub.d/*,legacy/*,kernel/*}
 
 	for i in $(AUTOGEN_DEB_FILES) ; do \
-		rm -f debian/grub-{pc,efi-*,ieee1275,coreboot,yeeloong}{,-bin}.$$i ; \
+		rm -f debian/grub-{pc,efi-*,ieee1275,coreboot,yeeloong}{,-bin,-dbg}.$$i ; \
 	done
 	rm -rf debian/tmp-*/
 
